--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "bundle:standalone": "esbuild index.tsx --bundle --format=esm --platform=browser --target=es2022 --jsx=automatic --outfile=bundle.js --loader:.ts=ts --loader:.tsx=tsx --minify"
   },
   "dependencies": {
     "react": "^19.2.3",
