--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "bundle:standalone": "esbuild index.tsx --bundle --format=esm --platform=browser --target=es2022 --jsx=automatic --outfile=bundle.js --loader:.ts=ts --loader:.tsx=tsx --loader:.svg=dataurl --minify"
   },
   "dependencies": {
-    "react": "^19.2.3",
     "lucide-react": "^0.561.0",
+    "react": "^19.2.3",
     "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
