--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
       "DOM",
       "DOM.Iterable"
     ],
+    "strict": true,
     "skipLibCheck": true,
     "types": [
       "node"
@@ -24,6 +25,7 @@
       ]
     },
     "allowImportingTsExtensions": true,
+    "forceConsistentCasingInFileNames": true,
     "noEmit": true
   }
 }
